--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^4.1.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
